feat(email): wire user-lifecycle templates to invites, password, MFA, lockout, welcome
Builds on the template/credential-vault foundation (#893) by lighting up the
eight default lifecycle templates seeded in V133:

- UserInviteService: generates an invite token (7-day expiry, reuses
  user_credential.reset_token), queues user.invite, and is wired into
  ScimUserService.createUser when tenant.auto_invite_on_create is on.
- AdminInviteController: POST /api/admin/users/{id}/invite for re-sends.
- InternalEmailController.send-template: new endpoint plus WorkerClient
  helper so kelta-auth can queue templated emails by key.
- PasswordController: drops the hardcoded HTML and routes through
  user.password_reset; also sends user.password_changed after both
  change and reset.
- PasswordPolicyService: sends user.account_locked when the failed-attempt
  threshold trips.
- MfaController + TotpService: send user.mfa_enrolled on enrollment and
  user.mfa_disabled on disable/reset.
- LoginTrackingFilter: stamps platform_user.welcomed_at on first login
  and queues user.welcome.
- EmailVerificationController: POST /auth/email/send-verification and
  GET /auth/email/verify flow, backed by V135 columns
  (email_verified, email_verification_token/expires_at, welcomed_at).

Tests: UserInviteService (4) + existing suites — worker 1129, auth 183
all green.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>